...
    <SafeAreaView style={{ flex: 1, backgroundColor: '#fff' }}>
      <View style={styles.header}>
        <TouchableOpacity
          onPress={() => {
            navigation.goBack();
          }}
          testID="back_to_home_button"
          accessibilityLabel="back_to_home_button"
        >
          <CustomIcon Icon={ICONS.backIcon} width={20} height={20} />
        </TouchableOpacity>
        <Text style={styles.headerTitle}>
          {language === 'ar' ? 'عربة التسوق' : 'Cart'}
...
